Fixed search box size/alignment for the pupil name search filter

--- a/admin/assets/stylesheets/elements/_filters.scss
+++ b/admin/assets/stylesheets/elements/_filters.scss
@@ -49,10 +49,10 @@
 .filter-name {
   label {
     background-color: $grey-1;
-    padding: 5px;
+    padding: pem(5px);
 
     img {
-      padding-left: 5px;
+      padding-left: pem(5px);
       vertical-align: middle;
     }
   }
